# yocto-rust-hello-world

./: Cargo.toml  hello-tmp_0.1.0.bb  hello-world_0.1.0.bb
src/: main.rs
