[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hello world app"
repository = "git@github.com:lucasdietrich/yocto-rust-hello-world.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-bitbake = "0.3.16"
